Initial TUT class code commit

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
   </style>
   <script src="lib/p5/p5.js"></script>
   <script src="lib/p5/addons/p5.sound.min.js"></script>
+  <script src="lib/tut/Card.js"></script>
+  <script src="lib/tut/Draft.js"></script>
+  <script src="lib/tut/Link.js"></script>
   <script src="sketch.js"></script>
 </head>
 
